--- a/lecture-slides/lecture6.qmd
+++ b/lecture-slides/lecture6.qmd
@@ -64,7 +64,7 @@ $$ H_0: \mu = \mu_0$$
 
 - For example, that the historical value is no longer the baseline and the population mean changed.
 
-$$ H_0: \mu \neq \mu_0$$
+$$ H_1: \mu \neq \mu_0$$
 
 # Errors
 
@@ -217,7 +217,8 @@ z_score <- (x_bar - mu_0) / se
 # Calculate the p-value for a left-tailed test
 p_value <- pnorm(z_score)
 ```
-
+<!--  lecture ended here -->
+<!--  previous lecture ended in the t confidence interval-->
 ## Proportions
 
 - Proportions work just like means.
@@ -401,6 +402,16 @@ poll_data %>%
   theme_minimal()
 ```
 
+## R Implementation: T-test
+
+- We use the `t.test()` base R function for computing t-tests, either one sample or two sample (we will cover this soon).
+
+- Define the alternative hypothesis for a right, left or two-tailed test using `alternative`
+
+- May need to use `na.action` to not consider `NA` values.
+
+- When we already have the summarised data (i.e. given the mean and std. deviation), we should calculate our own $p$-value or critical value using `pt()` and `qt()`.
+
 # Hypothesis Testing for Means of Two Populations
 
 ## Two populations?
@@ -492,3 +503,13 @@ Where:
 - $\mu_d$ is the hypothesized mean difference.
 - $s_d$ is the sample standard deviation of the differences.
 - $n$ is the sample size.
+
+## R Implementation: Two Sample t-tests
+
+- `t.test()` is a wildly customizable function! 
+  - Allows for feeding two vectors of the samples to be used
+
+- For paired samples, use the `paired` argument.
+
+- Two sample proportion tests have the `prop.test()` function, which provides a chi-squared approximation of the test (better).
+  - To actually use the $z$-test, calculate $p$-values or critical values yourself with the `_norm()` functions
